[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/e-Ukraine/e-Ukraine-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Home.gd" type="Script" id=2]
[ext_resource path="res://scenes/Card.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/e-Ukraine Head/e-UkraineHead-Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://icons/white plus.svg" type="Texture" id=5]
[ext_resource path="res://fonts/e-Ukraine/e-Ukraine-Bold.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 31
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.960784, 0.717647, 0.694118, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=8]
size = 17
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 11.0
margin_right = -22.0
margin_bottom = -9.0

[node name="Label" type="Label" parent="VBoxContainer/Header/HBoxContainer"]
margin_top = 5.0
margin_right = 468.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Замітки"

[node name="SearchBar" type="LineEdit" parent="VBoxContainer/Header/HBoxContainer"]
margin_left = 472.0
margin_right = 972.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
clear_button_enabled = true
placeholder_text = "Пошук у замітках..."
caret_blink = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 30.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 964.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 964.0
margin_bottom = 117.0
custom_constants/separation = 20

[node name="1" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 220.0
margin_bottom = 117.0

[node name="Card" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/1" instance=ExtResource( 3 )]
margin_right = 220.0
custom_styles/panel = SubResource( 7 )

[node name="2" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 460.0
margin_bottom = 117.0

[node name="Card" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/2" instance=ExtResource( 3 )]
margin_right = 220.0
custom_styles/panel = SubResource( 7 )

[node name="3" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 700.0
margin_bottom = 117.0

[node name="Card" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/3" instance=ExtResource( 3 )]
margin_right = 220.0
custom_styles/panel = SubResource( 7 )

[node name="4" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 720.0
margin_right = 940.0
margin_bottom = 117.0

[node name="Card" parent="VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/4" instance=ExtResource( 3 )]
margin_right = 220.0
custom_styles/panel = SubResource( 7 )

[node name="NewButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -60.0
margin_right = -10.0
margin_bottom = -13.0
custom_constants/hseparation = 16
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Нова замітка"
icon = ExtResource( 5 )
expand_icon = true

[connection signal="resized" from="." to="." method="_on_Home_resized"]
[connection signal="visibility_changed" from="." to="." method="_on_Home_visibility_changed"]
[connection signal="text_changed" from="VBoxContainer/Header/HBoxContainer/SearchBar" to="." method="_on_SearchBar_text_changed"]
[connection signal="pressed" from="NewButton" to="." method="_on_NewButton_pressed"]
